fix: plugin kyverno to argocd root app

--- a/gitops/argo-apps/overlays/local/root/kustomization.yaml
+++ b/gitops/argo-apps/overlays/local/root/kustomization.yaml
@@ -52,3 +52,5 @@ resources:
   - ../../../base/monitoring-post-config.yaml
   # k8s
   - ../../../base/k8s-post-config.yaml
+  # kyverno
+  - ../../../base/kyverno.yaml
