--- a/gitops/applications/overlays/rdbms_provider/percona/db/pg-cluster.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db/pg-cluster.yaml
@@ -56,11 +56,11 @@ spec:
             name: "${ARGOCD_ENV_dbdeploy_name_prefix}-pgbackrest-secret"
       global:
         repo1-path: /pgbackrest/${ARGOCD_ENV_dbdeploy_name_prefix}
-        repo1-retention-full: '7' # keep full backups for x days
+        repo1-retention-full: '3' # keep full backups for x days
         repo1-retention-full-type: time #This is based on the total number of days you would like to keep a backup. Option 2 is count
-        #repo1-s3-uri-style: path # host - Connect to bucket.endpoint host, path - Connect to endpoint host and prepend bucket to URIs.
-        #repo1-storage-verify-tls: 'n' # Verify TLS certificate when connecting to the storage
-        #repo2-storage-port: '80'
+        repo1-s3-uri-style: path # host - Connect to bucket.endpoint host, path - Connect to endpoint host and prepend bucket to URIs.
+        repo1-storage-verify-tls: 'n'
+        repo1-storage-port: '443'
 
       manual:
         options:
@@ -77,14 +77,14 @@ spec:
             full: "0 0 * * 6"
             differential: "0 1 * * 1-6"
             #incremental: "0 1 * * 1-6"
-        - name: repo2
-          volume:
-            volumeClaimSpec:
-              accessModes:
-              - ReadWriteOnce
-              resources:
-                requests:
-                  storage: 10Gi
+        # - name: repo2
+        #   volume:
+        #     volumeClaimSpec:
+        #       accessModes:
+        #       - ReadWriteOnce
+        #       resources:
+        #         requests:
+        #           storage: 10Gi
       repoHost:
         affinity:
           podAntiAffinity:
