--- a/gitops/applications/overlays/rdbms_provider/percona/db/pg-cluster.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db/pg-cluster.yaml
@@ -55,7 +55,7 @@ spec:
         - secret:
             name: "${ARGOCD_ENV_dbdeploy_name_prefix}-pgbackrest-secret"
       global:
-        repo1-path: /pgbackrest/${ARGOCD_ENV_dbdeploy_name_prefix}
+        repo1-path: /pgbackrest
         repo1-retention-full: '3' # keep full backups for x days
         repo1-retention-full-type: time #This is based on the total number of days you would like to keep a backup. Option 2 is count
         repo1-s3-uri-style: path # host - Connect to bucket.endpoint host, path - Connect to endpoint host and prepend bucket to URIs.
