--- a/gitops/argo-apps/base/kyverno.yaml
+++ b/gitops/argo-apps/base/kyverno.yaml
@@ -33,3 +33,11 @@ spec:
     repoURL: ${ARGOCD_ENV_argocd_repo_url}
     targetRevision: ${ARGOCD_ENV_utils_application_gitrepo_tag}
     path: gitops/applications/base/kyverno
+    plugin:
+      name: envsubst
+      env:
+        - name: "kyverno_namespace"
+          value: "${ARGOCD_ENV_utils_kyverno_namespace}"
+
+        - name: "kyverno_helm_version"
+          value: "${ARGOCD_ENV_utils_kyverno_helm_version}"
