--- a/terraform/k8s/default-config/cluster-config.yaml
+++ b/terraform/k8s/default-config/cluster-config.yaml
@@ -55,4 +55,5 @@ gitlab_admin_rbac_group: tenant-admins
 gitlab_readonly_rbac_group: tenant-viewers
 coredns_bind_address: "169.254.20.10"
 single_nat_gateway: true
-migrate: false 
+migrate: false
+managed_svc_as_monolith: false
