Replace mittwald secretgenerator with ESO

--- a/gitops/applications/base/netbird-pre/netbird-random-secrets.yaml
+++ b/gitops/applications/base/netbird-pre/netbird-random-secrets.yaml
@@ -1,25 +1,59 @@
-apiVersion: "secretgenerator.mittwald.de/v1alpha1"
-kind: "StringSecret"
+apiVersion: generators.external-secrets.io/v1alpha1
+kind: Password
 metadata:
   name: "${ARGOCD_ENV_netbird_datastore_encryption_key_secret}"
   namespace: "${ARGOCD_ENV_netbird_namespace}"
 spec:
-  forceRegenerate: false
-  fields:
-    - fieldName: "${ARGOCD_ENV_netbird_datastore_encryption_key_secret_key}"
-      encoding: "hex"
-      length: "32"
+  length: 32
+  symbols: 0
+  noUpper: true
+  allowRepeat: true
 ---
-apiVersion: "secretgenerator.mittwald.de/v1alpha1"
-kind: "StringSecret"
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: "${ARGOCD_ENV_netbird_datastore_encryption_key_secret}"
+  namespace: "${ARGOCD_ENV_netbird_namespace}"
+spec:
+  refreshInterval: 0s
+  target:
+    name: "${ARGOCD_ENV_netbird_datastore_encryption_key_secret}"
+    template:
+      data:
+        "${ARGOCD_ENV_netbird_datastore_encryption_key_secret_key}": "{{ .password }}"
+  dataFrom:
+  - sourceRef:
+      generatorRef:
+        apiVersion: generators.external-secrets.io/v1alpha1
+        kind: Password
+        name: "${ARGOCD_ENV_netbird_datastore_encryption_key_secret}"
+---
+apiVersion: generators.external-secrets.io/v1alpha1
+kind: Password
 metadata:
   name: "${ARGOCD_ENV_netbird_relay_secret}"
   namespace: "${ARGOCD_ENV_netbird_namespace}"
 spec:
-  forceRegenerate: false
-  fields:
-    - fieldName: "${ARGOCD_ENV_netbird_relay_secret_key}"
-      encoding: "hex"
-      length: "32"
+  length: 32
+  symbols: 0
+  noUpper: true
+  allowRepeat: true
 ---
-
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: "${ARGOCD_ENV_netbird_relay_secret}"
+  namespace: "${ARGOCD_ENV_netbird_namespace}"
+spec:
+  refreshInterval: 0s
+  target:
+    name: "${ARGOCD_ENV_netbird_relay_secret}"
+    template:
+      data:
+        "${ARGOCD_ENV_netbird_relay_secret_key}": "{{ .password }}"
+  dataFrom:
+  - sourceRef:
+      generatorRef:
+        apiVersion: generators.external-secrets.io/v1alpha1
+        kind: Password
+        name: "${ARGOCD_ENV_netbird_relay_secret}"
