--- a/gitops/applications/base/zitadel-pre/zitadel-random-secrets.yaml
+++ b/gitops/applications/base/zitadel-pre/zitadel-random-secrets.yaml
@@ -1,12 +1,29 @@
-apiVersion: "secretgenerator.mittwald.de/v1alpha1"
-kind: "StringSecret"
+apiVersion: generators.external-secrets.io/v1alpha1
+kind: Password
 metadata:
-  name: "masterkey"
+  name: masterkey-generator
   namespace: "${ARGOCD_ENV_zitadel_namespace}"
 spec:
-  forceRegenerate: false
-  fields:
-    - fieldName: "masterkey"
-      encoding: "hex"
-      length: "32"
+  length: 32
+  symbols: 0
+  noUpper: true
+  allowRepeat: true
 ---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: zitadel-masterkey
+  namespace: "${ARGOCD_ENV_zitadel_namespace}"
+spec:
+  refreshInterval: 0s
+  target:
+    name: masterkey
+    template:
+      data:
+        masterkey: "{{ .password }}"
+  dataFrom:
+  - sourceRef:
+      generatorRef:
+        apiVersion: generators.external-secrets.io/v1alpha1
+        kind: Password
+        name: masterkey-generator
