--- a/gitops/applications/base/kyverno/kustomization.yaml
+++ b/gitops/applications/base/kyverno/kustomization.yaml
@@ -1,7 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
   - namespaces.yaml
+  - image-rewrite-policy.yaml
 
 helmCharts:
   - name: kyverno
