fix: exclude istios placeholder image "auto:latest"

--- a/gitops/applications/base/kyverno/image-rewrite-policy.yaml
+++ b/gitops/applications/base/kyverno/image-rewrite-policy.yaml
@@ -23,6 +23,9 @@ spec:
                   value:
                     - docker.io/*
                     - xpkg.upbound.io/*
+                - key: "{{ element.image }}"
+                  operator: NotEquals
+                  value: "auto:latest"
             patchStrategicMerge:
               metadata:
                 annotations:
