increase CC loki ingester limits

--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -170,8 +170,8 @@ loki_distributor_limits_cpu: "150m"
 loki_distributor_limits_memory: "192Mi"
 loki_ingester_requests_cpu: "100m"
 loki_ingester_requests_memory: "256Mi"
-loki_ingester_limits_cpu: "150m"
-loki_ingester_limits_memory: "512Mi"
+loki_ingester_limits_cpu: "500m"
+loki_ingester_limits_memory: "1Gi"
 loki_querier_limits_cpu: "150m"
 loki_querier_limits_memory: "192Mi"
 loki_query_frontend_limits_cpu: "150m"
