fix: also exclude istio-ingress-int

--- a/gitops/applications/base/kyverno/image-rewrite-policy.yaml
+++ b/gitops/applications/base/kyverno/image-rewrite-policy.yaml
@@ -18,6 +18,7 @@ spec:
         - resources:
             namespaces:
             - istio-ingress-ext
+            - istio-ingress-int
       mutate:
         foreach:
           - list: request.object.spec.containers[]
