--- a/terraform/k8s/default-config/mojaloop-stateful-resources-managed-monolith.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-managed-monolith.yaml
@@ -38,7 +38,7 @@ common-mojaloop-db:
       mojaloop/env: ft-sbox-rw
       mojaloop/owner: Samuel-Kummary
     username: common_mojaloop
-    master_user_password_secret_namespace: mojaloop
+    master_user_password_secret_namespace: stateful-resources
     master_user_password_secret: common-mojaloop-db-secret
     master_user_password_secret_key: password
     logical_service_name: common-mojaloop-db
