--- a/terraform/k8s/default-config/mojaloop-stateful-resources-managed-monolith.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-managed-monolith.yaml
@@ -39,9 +39,9 @@ common-platform-db:
       mojaloop/owner: Samuel-Kummary
     username: common_platform
     master_user_password_secret_namespace: stateful-resources
-    master_user_password_secret: common-mojaloop-db-secret
+    master_user_password_secret: common-platform-db-secret
     master_user_password_secret_key: password
-    logical_service_name: common-mojaloop-db
+    logical_service_name: common-platform-db
     logical_service_port: 3306
 common-mojaloop-db:
   external_resource_config:
