--- a/terraform/k8s/default-config/mojaloop-stateful-resources-managed-monolith.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-managed-monolith.yaml
@@ -1,4 +1,5 @@
 common-platform-db:
+  app_owner: "platform"
   external_resource_config:
     password_key_name: common_platform_db_password
     instance_address_key_name: common_platform_db_instance_address
@@ -11,7 +12,7 @@ common-platform-db:
     engine: aurora-mysql
     engine_version: 8.0.mysql_aurora.3.04.0
     family: aurora-mysql8.0
-    instance_class: db.t4g.large
+    instance_class: db.t3.medium
     replicas: 1
     maintenance_window: Sun:04:00-Sun:06:00
     major_engine_version: "8.0"
@@ -28,6 +29,8 @@ common-platform-db:
         value: utf8mb4
       - name: character_set_server
         value: utf8mb4
+      - name: innodb_lock_wait_timeout
+        value: "120"        
     port: "3306"
     skip_final_snapshot: true
     multi_az: false
@@ -44,6 +47,7 @@ common-platform-db:
     logical_service_name: common-platform-db
     logical_service_port: 3306
 common-mojaloop-db:
+  app_owner: "mojaloop"
   external_resource_config:
     password_key_name: common_mojaloop_db_password
     instance_address_key_name: common_mojaloop_db_instance_address
@@ -56,7 +60,7 @@ common-mojaloop-db:
     engine: aurora-mysql
     engine_version: 8.0.mysql_aurora.3.04.0
     family: aurora-mysql8.0
-    instance_class: db.t4g.large
+    instance_class: db.t3.medium
     replicas: 1
     maintenance_window: Sun:04:00-Sun:06:00
     major_engine_version: "8.0"
