--- a/gitops/applications/overlays/rdbms_provider/percona/db/kustomization.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db/kustomization.yaml
@@ -2,6 +2,20 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - backups-objectstore.yaml
   - db-external-name-service.yaml
-  - pg-cluster.yaml
+
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+resources:
+  - db-external-name-service.yaml
+
+helmGlobals:
+  chartHome: ./helmcharts
+
+helmCharts:
+  - name: pg-cluster
+    releaseName: ${ARGOCD_ENV_app_name}
+    version: 0.1.0
+    valuesFile: pg-values.yaml
+    namespace: ${ARGOCD_ENV_namespace}
