--- a/gitops/applications/overlays/rdbms_provider/percona/db/pg-values.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db/pg-values.yaml
@@ -10,7 +10,7 @@ global:
 s3:
   enabled: true
   devMode: true
-  endpoint: ""
+  endpoint: "s3.amazonaws.com"
   bucket: "pgbackrest-buck"
   region: "eu-central-1"
   credentials_secret: "cluster1-pgbackrest-secrets"
