--- a/gitops/applications/overlays/rdbms_provider/percona/db/kustomization.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 
 resources:
   - db-external-name-service.yaml
+  - cluster1-pgbackrest-secrets.yaml
 
 helmGlobals:
   chartHome: ./helmcharts
