--- a/gitops/applications/overlays/rdbms_provider/percona/db/helmcharts/pg-cluster/templates/local-objectstore.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/db/helmcharts/pg-cluster/templates/local-objectstore.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.s3.enabled .Values.s3.devMode }}
+{{- if and .Values.backup.s3.enabled .Values.backup.s3.devMode }}
 apiVersion: objectbucket.io/v1alpha1
 kind: ObjectBucketClaim
 metadata:
