--- a/gitops/applications/base/kyverno/image-rewrite-policy.yaml
+++ b/gitops/applications/base/kyverno/image-rewrite-policy.yaml
@@ -1,10 +1,10 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: redirect-dockerio-to-ecr-pullthrough
+  name: redirect-dockerio-to-mirrorgcrio
 spec:
   rules:
-    - name: redirect-dockerio-to-ecr-pullthrough
+    - name: redirect-dockerio-to-mirrorgcrio
       match:
         any:
           - resources:
@@ -31,14 +31,14 @@ spec:
             patchStrategicMerge:
               metadata:
                 annotations:
-                  kyverno/redirect-dockerio-to-ecr-pullthrough: applied
+                  kyverno/redirect-dockerio-to-mirrorgcrio: applied
               spec:
                 containers:
                   - name: "{{ element.name }}"
                     env:
                       - name: ORIGINAL_IMAGE
                         value: "{{ element.image }}"
-                    image: "390402568199.dkr.ecr.eu-west-1.amazonaws.com/docker-hub/{{ image_normalize(element.image) }}"
+                    image: 'mirror.gcr.io/{{ images.containers."{{element.name}}".path}}:{{images.containers."{{element.name}}".tag}}'"
 ---
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
