--- a/terraform/gitlab/ci-templates/k8s-cluster/.gitlab-ci.yml
+++ b/terraform/gitlab/ci-templates/k8s-cluster/.gitlab-ci.yml
@@ -80,7 +80,7 @@ cache:
     - export NETBIRD_MS_GW_SETUP_KEY="$(vault kv get -field=value ${KV_SECRET_PATH}/${CI_PROJECT_NAME}/netbird_ms_gw_setup_key)"
     - export KUBERNETES_OIDC_CLIENT_ID="$(vault kv get -field=value ${KV_SECRET_PATH}/${CI_PROJECT_NAME}/kubernetes_oidc_client_id)"
     - |
-      export SUBMODULE_REVISIONS="$((echo "submodules:"; git submodule -q foreach 'echo "  "`git remote get-url origin`: `git rev-parse HEAD`') | yq eval '.' -o=json - | tr -d '\n\t\r')"
+      export SUBMODULE_REVISIONS="$((echo "submodules:"; git submodule -q foreach 'echo "  "`git remote get-url origin`": {ref: "`git rev-parse HEAD`'"}"') | yq eval '.' -o=json - | tr -d '\n\t\r')"
     - source setcivars.sh
     - echo "https://${PRIVATE_REPO_USER}:${PRIVATE_REPO_TOKEN}@${PRIVATE_REPO}" >> ~/.gitcredentials.store
     - git config --global advice.detachedHead false
