--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -56,6 +56,7 @@ crossplane_func_go_templating_version: "0.8.0"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
 coredns_localcache_version: "1.11.3"
+kyverno_helm_version: "3.3.4"
 
 istio_egress_gateway_max_replicas: 5
 istio_proxy_log_level: warn
