--- a/gitops/applications/base/vault-post-config/vault-backup-resources.yaml
+++ b/gitops/applications/base/vault-post-config/vault-backup-resources.yaml
@@ -7,8 +7,8 @@ spec:
   bucketName: vault-backups
   storageClassName: ceph-bucket
   additionalConfig:
-    maxObjects: ${ARGOCD_ENV_vault_backup_bucket_maxobjects}
-    maxSize: ${ARGOCD_ENV_vault_backup_bucket_maxsize}
+    maxObjects: "${ARGOCD_ENV_vault_backup_bucket_maxobjects}"
+    maxSize: "${ARGOCD_ENV_vault_backup_bucket_maxsize}""
 ---
 apiVersion: v1
 kind: ServiceAccount
