fix invalid YAML in values-pm4ml.yaml.tpl

--- a/terraform/k8s/default-config/pm4ml-vars.yaml
+++ b/terraform/k8s/default-config/pm4ml-vars.yaml
@@ -18,4 +18,5 @@ currency: ${currency}
 fxp_id: "fxp"
 core_connector_config: {}
 payment_token_adapter_config: {}
-ui_custom_config: {}
+ui_custom_config:
+  TITLE: Payment Manager
