--- a/terraform/k8s/default-config/cluster-config.yaml
+++ b/terraform/k8s/default-config/cluster-config.yaml
@@ -59,3 +59,5 @@ single_nat_gateway: true
 migrate: false
 managed_svc_as_monolith: false
 manage_parent_domain: true
+block_storage_provider: ebs
+object_storage_provider: s3
