--- a/terraform/k8s/default-config/common-vars.yaml
+++ b/terraform/k8s/default-config/common-vars.yaml
@@ -36,6 +36,7 @@ prometheus_pvc_size: 50Gi
 loki_retention_enabled: true
 loki_ingester_retention_period: 72h
 loki_ingester_max_chunk_age: 2h
+loki_query_scheduler_enabled: false
 loki_ingester_replication_factor: "3"
 loki_distributor_replica_count: "2"
 loki_ingester_replica_count: "3" # loki_ingester_replica_count should be >= loki_ingester_replication_factor
