--- a/terraform/ccnew/default-config/bare-metal-vars.yaml
+++ b/terraform/ccnew/default-config/bare-metal-vars.yaml
@@ -86,3 +86,5 @@ ci_iam_user_client_secret_name: "replace"
 ci_iam_user_client_id_name: "replace"
 dns_resolver_ip: 10.10.100.1
 rook_disk_vol: "/dev/sdb"
+bare_metal_cloud_password: "test123"
+bare_metal_cloud_user: "root@pam"
